Adicionando exercícios do Laboratorio 1 com revisão de toda a matéria

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -55,7 +55,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=iftm.ec.cg.aula01.introopengl.Renderer
+main.class=iftm.ec.cg.introopengl.Renderer
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
